--- a/index-production.html
+++ b/index-production.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-    <title>Angular ES6 Boilerplate</title>
+  <title>Angular ES6 Boilerplate</title>
 </head>
 <body>
 
 <script src="build.js"></script>
-<script src="transpiled-with-source-maps.js"></script>
+<script src="export.js"></script>
 
 </body>
 </html>
