--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 </head>
 <body>
 
-<script src="dist/build.js"></script>
-<script src="dist/transpiled-with-source-maps.js"></script>
+<script src="build.js"></script>
+<script src="export.js"></script>
 
 </body>
 </html>
